# meson_demo1

./: .gitignore  README.md  meson.build  testA.cpp
src/my_package/: _my_package.pyi  module.py
src/my_package/cpp/: binding.cpp  my_code.cpp  my_code.h
